--- a/CSS/main.css
+++ b/CSS/main.css
@@ -44,9 +44,15 @@ hr {
 strong, b {
   font-weight: 700; }
 
-input,
+input {
+  background-color: grey;
+  color: black;
+  margin-bottom: 10px;
+}
 button,
-select,
+select {
+  color:grey;
+}
 optgroup,
 textarea {
   margin: 0;
@@ -1466,7 +1472,9 @@ button.button {
   display: flex;
   justify-content: space-between;
   align-items: stretch;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+
+}
   @media (max-width: 400px) {
     .form__inputs {
       display: block; } }
@@ -1474,7 +1482,9 @@ button.button {
 .form__input {
   position: relative;
   flex: 1 1 auto;
-  width: 1%; }
+  width: 1%;
+
+}
   @media (max-width: 400px) {
     .form__input {
       width: 100%; } }
@@ -1501,7 +1511,7 @@ button.button {
 
 .form__message_opener {
   margin-top: 10px;
-  text-align: center; }
+  text-align: left; }
   .form__message_opener--black .form__message_opener_box {
     opacity: 0.8;
     color: white;
@@ -1727,7 +1737,9 @@ button.button {
   margin-right: 15px; }
 
 .slider {
-  position: relative; }
+  position: relative;
+
+}
 
 .slider__arrow {
   position: absolute;
@@ -1743,15 +1755,23 @@ button.button {
       display: none; } }
 
 .slider__box {
-  padding: 0;
-  margin: 0;
-  list-style: none; }
+  padding-left: 0;
+
+  list-style: none;
+
+  }
+
 
 .slick-slide {
-  outline: none; }
+ outline: none;
+
+}
 
 .slider__img {
-  width: 100%; }
+  width: 100%;
+
+
+}
 
 .slick-dots {
   padding: 0;
@@ -2141,7 +2161,7 @@ button.button {
   max-width: 500px; }
 
 .header-02__logo_img, .header-21__logo_img, .header-54__logo_img {
-  max-height: 30px;
+  max-height: 80px;
   max-width: 100px; }
 
 .header-02__text, .header-21__text, .header-54__text {
@@ -4215,8 +4235,11 @@ button.button {
       color: #eee; }
 
 .slider-01 {
+position: relative;
   padding-top: 70px;
-  padding-bottom: 100px; }
+  padding-bottom: 100px;
+  margin-left: 28%;
+width: 500px;}
   .slider-01 .slick-list {
     border-radius: 10px;
     box-shadow: 0 12px 44px 0 rgba(0, 0, 0, 0.1); }
@@ -7036,7 +7059,7 @@ button.button {
 
 .cta_form-10__form_box .form__button {
   width: 100%;
-  text-align: center; }
+  text-align: center;; }
 
 .cta_form-10__form_box .form__checkbox {
   width: 100%;
@@ -8335,6 +8358,7 @@ button.button {
 
 .contact-02__link {
   text-decoration: none; }
+
 
 .testimonials-01 {
   padding: 70px 0 100px;
@@ -11899,9 +11923,11 @@ button.button {
 
 .slick-slide {
   float: left;
-  height: 100%;
+
+
+  height:100%;
   min-height: 1px;
-  display: none; }
+  }
   [dir="rtl"] .slick-slide {
     float: right; }
   .slick-slide img {
@@ -12108,7 +12134,7 @@ button.button {
 
 */
 /*
-	
+
 	1. Buttons
 
  */
@@ -12352,7 +12378,7 @@ a.pswp__share--download:hover {
   padding: 0 10px; }
 
 /*
-	
+
 	4. Caption
 
  */
@@ -12449,8 +12475,8 @@ a.pswp__share--download:hover {
   margin: 0; }
 
 .pswp--css_animation .pswp__preloader__cut {
-  /* 
-			The idea of animating inner circle is based on Polymer ("material") loading indicator 
+  /*
+			The idea of animating inner circle is based on Polymer ("material") loading indicator
 			 by Keanu Lee https://blog.keanulee.com/2014/10/20/the-tale-of-three-spinners.html
 		*/
   position: relative;
@@ -12495,7 +12521,7 @@ a.pswp__share--download:hover {
     transform: rotate(0); } }
 
 /*
-	
+
 	6. Additional styles
 
  */
